Fix custom task receive hook
